# flatmatter

./: .gitignore  LICENSE.txt  README.md  deno.json  mod.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: coverage.yml  node.js.yml  python-package-test.yml
flatmatter/: __init__.py  compute_action.py  conformance_result.py  flatmatter.py  flatmatter_test.py  function.py  function_name.py  parsed_value.py  test_flatmatter.py
src/: flatmatter.test.ts  flatmatter.ts  index.ts  utils.ts
src/serializers/: to_json.test.ts  to_json.ts  to_object.test.ts  to_object.ts
