[project]
name = "flatmatter"
version = "0.1.0"
description = "A YAML-like data serialization language, and library."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  {
    name = "Asko Nõmm",
    email = "asko@nmm.ee"
  }
]
dependencies = []
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 2 :: Pre-Alpha"
]

[tool.black]
line-length = 100
